plugindir = $(libdir)/enigma2/python/Plugins/SkinComponents/WeatherComponent
plugin_DATA = README

componentsdir = $(libdir)/enigma2/python/Components
components_PYTHON = Components/WeatherMSN.py

converterdir = $(libdir)/enigma2/python/Components/Converter
converter_PYTHON = Components/Converter/MSNWeather.py

rendererdir = $(libdir)/enigma2/python/Components/Renderer
renderer_PYTHON = Components/Renderer/MSNWeatherPixmap.py

sourcesdir = $(libdir)/enigma2/python/Components/Sources
sources_PYTHON = Components/Sources/MSNWeather.py
